fix Arch dependency names (libpulse) for AUR and installer script

--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="Kitsune live wallpaper engine runtime for Wayland/Hyprland"
 arch=('x86_64' 'aarch64')
 url="https://github.com/KitotsuMolina/kitsune-livewallpaper"
 license=('MIT')
-depends=('ffmpeg' 'mpvpaper' 'pulseaudio-utils' 'pipewire-pulse' 'procps-ng' 'pciutils' 'systemd')
+depends=('ffmpeg' 'mpvpaper' 'libpulse' 'pipewire-pulse' 'procps-ng' 'pciutils' 'systemd')
 makedepends=('cargo')
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('SKIP')
